# lazycat-sdk

./: .gitignore  HANDOFF.md  README.md  pyproject.toml
lazycat/: __init__.py  agent.py  cache.py  config.py  grounded_research.py  health.py  html_auditor.py  html_skills.py  llm.py  llm_json.py  logging.py  ratelimit.py  research.py  resilience.py  router.py  session.py  sse.py  streaming.py  tool_registry.py  tools.py  validators.py
lazycat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scratch/: test_prism.py
tests/: test_agent.py  test_agent_stream_run.py  test_cache.py  test_config.py  test_html_auditor.py  test_llm.py  test_llm_json.py  test_ratelimit.py  test_resilience.py  test_sse.py  test_stream_and_budget_fixes.py  test_tool_arg_filtering.py
