[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lazycat"
version = "0.1.0"
description = "Core SDK for the LazyCat420 ecosystem"
authors = [
    { name = "LazyCat420" }
]
requires-python = ">=3.10"
dependencies = [
    "httpx",
    "pydantic",
    "fastapi",
    "sse-starlette",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]
