[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lazycat"
version = "0.2.0"
description = "Core SDK for the LazyCat420 ecosystem"
authors = [
    { name = "LazyCat420" }
]
requires-python = ">=3.10"
dependencies = [
    "httpx",
    "pydantic",
    "fastapi",
    "sse-starlette",
    "beautifulsoup4",
    "ddgs",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]
